force-app/main/default/objects/Itenrary_Line_Item__c/Itenrary_Line_Item__c.object-meta.xml
<CustomObject>
    <description>this object is about the line items of Itenrary.</description>
    <label>Itinerary Line Item</label>
    <nameField>
        <label>Itenrary Line Items No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itinerary Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>