force-app/main/default/objects/Itenrary_Line_Item__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Itenrary_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>