force-app/main/default/objects/Itenrary_Line_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Itenrary_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>