force-app/main/default/objects/Itenrary_Line_Item__c/fields/Itenrary_Items__c.field-meta.xml
<CustomField>
    <fullName>Itenrary_Items__c</fullName>
    <label>Itenrary</label>
    <referenceTo>Itenrary__c</referenceTo>
    <relationshipName>Itenrary_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>