force-app/main/default/objects/Itenrary_Line_Item__c/fields/Program_Itinerary_Details__c.field-meta.xml
<CustomField>
    <fullName>Program_Itinerary_Details__c</fullName>
    <label>Program Itinerary Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>