force-app/main/default/objects/Itenrary_Line_Item__c/fields/Program_Itinerary_Info__c.field-meta.xml
<CustomField>
    <fullName>Program_Itinerary_Info__c</fullName>
    <description>This field is for the main information of program itinerary.</description>
    <inlineHelpText>Please provide info of Program Itinerary</inlineHelpText>
    <label>Program Itinerary Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>